crates/symbolicator-native/tests/integration/snapshots/integration__symbolication__source_candidates.snap
---
source: crates/symbolicator-service/tests/integration/symbolication.rs
expression: response.unwrap()
---
stacktraces:
  - frames:
      - status: symbolicated
        original_index: 0
        addr_mode: "rel:0"
        instruction_addr: "0x3880"
        lang: c
        symbol: trigger_crash
        sym_addr: "0x3860"
        function: trigger_crash
        filename: example.c
        abs_path: /Users/swatinem/Coding/sentry-native/examples/example.c
        lineno: 60
        pre_context:
          - "#endif"
          - ""
          - static void
          - trigger_crash()
          - "{"
        context_line: "    memset((char *)invalid_mem, 1, 100);"
        post_context:
          - "}"
          - ""
          - int
          - "main(int argc, char **argv)"
          - "{"
modules:
  - debug_status: found
    features:
      has_debug_info: true
      has_unwind_info: false
      has_symbols: true
      has_sources: true
    arch: x86_64
    type: wasm
    code_id: 7f883fcdc55336d0a809b0150f09500b
    debug_id: 7f883fcd-c553-36d0-a809-b0150f09500b
    image_addr: "0x0"
    candidates:
      - source: local
        location: "http://localhost:<port>/symbols/7f/883fcdc55336d0a809b0150f09500b"
        download:
          status: notfound
      - source: local
        location: "http://localhost:<port>/symbols/7f/883fcdc55336d0a809b0150f09500b.debug"
        download:
          status: ok
          features:
            has_debug_info: true
            has_unwind_info: false
            has_symbols: true
            has_sources: false
        debug:
          status: ok
      - source: local
        location: "http://localhost:<port>/symbols/7f/883fcdc55336d0a809b0150f09500b.src.zip"
        download:
          status: ok
          features:
            has_debug_info: false
            has_unwind_info: false
            has_symbols: false
            has_sources: true

